# autobind

./: .hgignore  .hgtags  .stemdir.yaml  CMakeLists.txt  COPYING  FindClang.cmake  PrecompiledHeader.cmake  README.md  autobind.hpp  codegen.py  codegen.sh  example.cpp  example2.cpp  optional.hpp  test.py
doc/: make.bat  styles.scss
doc/doxygen/: Doxyfile
doc/source/: appendices.rst  appendix--building-with-gcc.rst  autobind-cxxapi.rst  conf.py  cxx-support.rst  getting-started.rst  implementation-notes.rst  index.rst
doc/source/_static/: bootstrap.css  more.css
doc/source/_static/firamono/: firamono-bold-demo.html  firamono-bold-webfont.eot  firamono-medium-demo.html  firamono-medium-webfont.eot  firamono-regular-demo.html  firamono-regular-webfont.eot  stylesheet.css
doc/source/_static/firasans/: firasans-bold-demo.html  firasans-bold-webfont.eot  firasans-bolditalic-demo.html  firasans-bolditalic-webfont.eot  firasans-book-demo.html  firasans-book-webfont.eot  firasans-bookitalic-demo.html  firasans-bookitalic-webfont.eot  stylesheet.css
doc/source/_templates/: bitbucketlink.html  globaltoc.html  layout.html  navbar.html
examples/: ackermann.cpp  codegen.py  example.cpp  example2.cpp  test.py
include/: autobind.hpp
include/autobind/: optional.hpp
scripts/: autobind.py
src/: CallGenerator.cpp  CallGenerator.hpp  ClassData.cpp  ClassData.hpp  DataExtractor.hpp  DiagnosticSuppressor.cpp  DiagnosticSuppressor.hpp  DiscoveryVisitor.cpp  DiscoveryVisitor.hpp  Export.hpp  Function.cpp  Function.hpp  Getter.cpp  Getter.hpp  Method.cpp  Method.hpp  Module.cpp  Module.hpp  ModuleManager.hpp  RawIndentOstream.cpp  RawIndentOstream.hpp  StringTemplate.hpp  TupleUnpacker.cpp  TupleUnpacker.hpp  Type.cpp  Type.hpp  attributeStream.hpp  data.hpp  diagnostics.cpp  diagnostics.hpp  function.cpp  main.cpp  plugin.cpp  prefix.hpp  printing.hpp  regex.hpp  stream.hpp  streamindent.hpp  symident.hpp  test.cpp  (+6 more)
src/exports/: Class.cpp  Class.hpp  ClassExport.hpp  Func.cpp  Func.hpp
tests/: abutil.py  fail_getter_arity.cpp  fail_getter_result.cpp  fail_no_conversion.cpp  fail_no_conversion2.cpp  fail_setter_arity.cpp  module.cpp  ok_conversion.cpp  test_fail.py  test_module.py
